# inspect-gate

./: PREREG-DRAFT-2026-07-10.md  README.md  pyproject.toml
analysis_2026-07-10/: ANALYSIS-MEMO.md  SUMMARY.json
analysis_2026-07-10/audit/: audit_dinomaly_seed4.json  audit_patchcore_seed0.json  audit_patchcore_seed1.json  audit_patchcore_seed2.json  audit_patchcore_seed3.json
analysis_2026-07-10/gate_calibration/: v1_dinomaly_seed1.json  v1_dinomaly_seed3.json  v1_dinomaly_seed4.json  v1_patchcore_seed1.json  v1_patchcore_seed3.json
analysis_2026-07-10/scripts/: run_analysis.py
b3_patchcore_2026-07-13/: RESULTS.md
baseline_comparison_2026-07-15/: results.json  runner.py
binding_demo_2026-07-13/: results.json
c2_tier2_2026-07-13/: run_tier2_grading.py
dinomaly_brancha_2026-07-10/canonical/: scores_dinomaly_seed0.jsonl  scores_dinomaly_seed1.jsonl  scores_dinomaly_seed2.jsonl  scores_dinomaly_seed4.jsonl
g2_promotion_2026-07-12/: run_g2_promotion.py
inspect_gate/: audit.py  baselines.py  cli.py  gate.py  io.py  report.py  reproduction.py  splits.py
latency_2026-07-13/: dinomaly_latency.json
manuscripts/: paper.tex
manuscripts/aei/: highlights.txt  (+1 more)
opcost_analysis_2026-07-16/: results.json  script.py
orchestration/: dinomaly_ksdd2_uni.py  dinomaly_patch.py  ingest_dinomaly_brancha.sh  next_boot_inspect_mpdd.sh  score_patchcore.py
reliability-commons/: LICENSE
tests/: test_certify.py  test_cli_e2e.py  test_io.py  test_ksdd2_prep.py  test_mpdd_adapter.py  test_phase0.py  test_run_pilot_cell.py
visa_results_2026-07-12/: MVTEC-VS-VISA.md
(+327 files in other folders)
