[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-gate"
version = "0.1.0.dev0"
description = "Certified conformal escaped-defect triage gate + excess-AURC audit for MVTec AD -- a thin wrapper over relmetrics."
requires-python = ">=3.9"
dependencies = [
    "relmetrics>=0.1",
    "numpy>=1.22",
    "scipy>=1.8",
]
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
inspect-gate = "inspect_gate.cli:main"

[tool.setuptools]
packages = ["inspect_gate"]
